[package]
name = "Arcaea_server_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
url = "2.5.4"
colored = "2.2.0"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
async-trait = "0.1"
md5 = "0.7"
openssl = { version = "0.10", features = ["vendored"], optional = true }
rustls = { version = "0.22", optional = true }
dotenv = "0.15.0"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rocket_prometheus = "0.10.1"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_mysql"]

[features]
default = ["rustls"]
rustls = ["dep:rustls"]
openssl = ["dep:openssl"]
