[package]
name = "Arcaea_server_rs"
version = "0.1.0"
edition = "2021"
default-run = "Arcaea_server_rs"

[dependencies]
lazy_static = "1.5.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
url = "2.5.4"
urlencoding = "2.1"
colored = "2.2.0"
sqlx = { version = "0.8", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
async-trait = "0.1"
ab_glyph = "0.2"
image = "0.25"
imageproc = "0.25"
md5 = "0.7"
hdrhistogram = "7"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
clap = { version = "4", features = ["derive", "env"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
rustls = { version = "0.22", optional = true }
dotenv = "0.15.0"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rocket_prometheus = "0.10.1"
aes-gcm = "0.10"
validator = "0.18"

[features]
default = ["rustls"]
rustls = ["dep:rustls"]
openssl = ["dep:openssl"]

[[bin]]
name = "init_db"
path = "src/bin/init_db.rs"

[[bin]]
name = "linkplayd"
path = "src/bin/linkplayd.rs"

[[bin]]
name = "sync_s3_manifest"
path = "src/bin/sync_s3_manifest.rs"

[[bin]]
name = "perf_load"
path = "src/bin/perf_load.rs"
